code new banner imgs

--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
     <img src="https://raw.githubusercontent.com/ryannengel/terrain/gh-pages/terrain.jpg" alt="" class="terrain-img" />
   </div>
   <div>
-    <img src="https://raw.githubusercontent.com/ryannengel/terrain/gh-pages/bazzar.jpg" alt="" class="bazzar" />
+    <img src="bazzar_banner.jpg" alt="" class="bazzar" />
   </div>
   <div>
     <img src="https://raw.githubusercontent.com/ryannengel/terrain/gh-pages/uncharted.jpg" alt="" class="uncharted"/>
+  </div>
+  <div>
+    <img src="facebook_banner.jpg" alt="" class="facebook"/>
   </div>
 </div>
 
